Fix z-index to get correct placement of static content

--- a/static/css/cov.css
+++ b/static/css/cov.css
@@ -23,7 +23,7 @@ staticCanvas
 #interactive-static{
     top: 0;
     left: 0;
-    z-index=0;
+    z-index: -1;
     pointer-events: none;
     grid-row: 2;
     grid-column: 1;
@@ -32,7 +32,7 @@ staticCanvas
 #interactive-content {
     top: 0;
     left: 0;
-    z-index=-1;
+    z-index: 0;
     grid-row: 2;
     grid-column: 1;
 }
@@ -46,7 +46,7 @@ staticCanvas
 #overview-static {
     top: 0;
     left: 0;
-    z-index=0;
+    z-index: 0;
     grid-row: 1;
     grid-column: 1;
 }
@@ -54,7 +54,7 @@ staticCanvas
 #staticCanvas {
     top: 0;
     left: 0;
-    z-index=0;
+    z-index: 0;
     pointer-events: none;
     grid-row: 1;
     grid-column: 1;
@@ -63,7 +63,7 @@ staticCanvas
 #dataCanvas {
     top: 0;
     left: 0;
-    z-index=-1;
+    z-index: -1;
     grid-row: 1;
     grid-column: 1;
 }
@@ -77,7 +77,7 @@ staticCanvas
 #staticOverviewCanvas {
     top: 0;
     left: 0;
-    z-index=0;
+    z-index: 0;
     pointer-events: none;
     visibility: hidden;
 }
